--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "license": "",
   "dependencies": {
-    "express": "4.10.2"
+    "express": "4.10.2",
+    "socket.io": "1.3.5"
   }
 }
