--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "dependencies": {
     "express": "4.10.2",
-    "socket.io": "1.3.5"
+    "socket.io": "1.3.7",
+    "twitter": "*"
   }
 }
