--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "4.10.2",
     "socket.io": "1.3.7",
-    "twitter": "*"
+    "twitter": "*",
+    "mecab-async": "*"
   }
 }
