--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "4.10.2",
     "socket.io": "1.3.7",
     "twitter": "*",
-    "mecab-async": "*"
+    "mecab-async": "*",
+    "mysql": "*"
   }
 }
