--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "socket.io": "1.3.7",
     "twitter": "*",
     "mecab-async": "*",
-    "mysql": "*"
+    "mysql": "*",
+    "moment": "*"
   }
 }
